# TaskManager

./: .gitignore  CMakeLists.txt  Deutsch.lang  English.lang  README.md  language.c  language.h  main.c  structuries.h  task_manager_interface.c  task_manager_interface.h  task_manager_interface_ge.c  task_manager_interface_ge.h  task_manager_save_file.c  task_manager_save_file.h  tasks.txt
src/: CMakeLists.txt  main.c  structuries.h
src/file_manager/: CMakeLists.txt  file_manager.c  file_manager.h
src/interface/: CMakeLists.txt  task_manager_interface.c  task_manager_interface.h
src/interface/language/: CMakeLists.txt  language.c  language.h
src/languages/: English.lang
